// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<div
  class="wp-components-grid css-1sz0vlw"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-grid css-jj7eeb"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom columns 1`] = `
<div
  class="wp-components-grid css-1dbbftp"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom rows 1`] = `
<div
  class="wp-components-grid css-ail65s"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom templateColumns 1`] = `
<div
  class="wp-components-grid css-qk6req"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom templateRows 1`] = `
<div
  class="wp-components-grid css-1900w81"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render gap 1`] = `
<div
  class="wp-components-grid css-yn4p4z"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render isInline 1`] = `
<div
  class="wp-components-grid css-1w2ybdf"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-grid css-b3bdpe"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;
